# flutter_blue_tizen

./: README.md  pubspec.yaml
example/: pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/tizen/: tizen-manifest.xml
example/tizen/lib/: libprotobuf-lite.so.25.0
lib/: flutter_blue_tizen.dart
proto/: flutterblue.proto
test/: flutter_blue_tizen_test.dart
tizen/: project_def.prop
tizen/inc/: BluetoothDeviceController.h  BluetoothManager.h  BluetoothState.h  BluetoothUtils.h  Log.h  LogLevel.h  LogLevels.h  Logger.h  NotificationsHandler.h  StateHandler.h  StreamHandler.h  Utils.h  flutterblue.pb.h
tizen/inc/GATT/: BluetoothCharacteristic.h  BluetoothDescriptor.h  BluetoothService.h
tizen/lib/: libatomic.so.1.2.0  libprotobuf-lite.la  libprotobuf-lite.so.25.0
tizen/lib/pkgconfig/: protobuf-lite.pc  protobuf.pc
tizen/src/: BluetoothDeviceController.cc  BluetoothManager.cc  BluetoothUtils.cc  Log.cc  Logger.cc  NotificationsHandler.cc  StateHandler.cc  Utils.cc  flutter_blue_tizen_plugin.cc  flutterblue.pb.cc  log.h
tizen/src/GATT/: BluetoothCharacteristic.cc  BluetoothDescriptor.cc  BluetoothService.cc
tizen/tests/: .gitignore  CMakeLists.txt  debug.sh  install.sh  main.cpp
tizen/tests/lib/: libEGL.so.1  libtizen-extension-client.so.0  libwayland-client.so.0
tizen/tests/lib/armel/: libtdm-client.so.0
tizen/tests/src/: main.cpp
